# shai

./: .envrc  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  shell.nix
.github/: release.yaml
.github/workflows/: release.yaml  test-and-release.yaml  test.yaml  tests.yaml
src/: args.rs  error.rs  lib.rs  main.rs  process_result.rs
src/config/: config_complete.rs  config_parts.rs  config_source.rs  config_source_env.rs  config_source_file.rs  defaults.rs  mod.rs
src/subcommands/: command.rs  configure.rs  mod.rs
tests/: config_tests.rs  noop_test.rs
