[package]
name = "shai"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
is-terminal = "0.4"
serde = { version = "1.0", features = ["derive"] }
ureq = { version = "2.6", features = ["tls", "gzip", "brotli", "native-certs", "json"] }

[profile.release]
lto = "fat"
strip = "symbols"

[dev-dependencies]
tempfile = "3.4.0"
