[package]
name = "shai"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
is-terminal = "0.4"
serde = { version = "1.0", features = ["derive"] }
ureq = { version = "2.6", features = ["tls", "native-certs", "gzip", "brotli", "json"] }

[profile.release]
lto = "fat"
strip = "symbols"

[dev-dependencies]
tempfile = "3.4.0"
